{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterMovement",
            "id": "85cce81c-0e36-4a5e-86cc-d5e48821ab92",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b7bf7248-ea78-4771-8878-db009c114c51",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Arrow keys",
                    "id": "5b0b1e9d-7105-4308-a398-0f5c0c2ada74",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a74a0773-a273-4ee8-83f2-8dfdcb9aad11",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9ba1f6f2-3bb9-4965-a494-51ae4688b3a1",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "18ab96d4-15a6-4f13-a44d-c242fdbfe9cf",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d790e412-cf9a-4c12-8add-65dfe66dd16b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Interactions",
            "id": "3ee7415d-1729-4252-856c-00b91a1edc99",
            "actions": [
                {
                    "name": "Sit",
                    "type": "Button",
                    "id": "a711aca2-5ae7-4778-93f9-a8f5dd149dc9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stand",
                    "type": "Button",
                    "id": "9f1bcd26-b762-4acc-ae30-cdc056bfc456",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Clap",
                    "type": "Button",
                    "id": "ab155757-b85b-4eb7-9890-353c26f9f9fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RaiseHand",
                    "type": "Button",
                    "id": "bb04d16a-0f90-4d1a-8a31-aa23567fb7f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "60f571c1-9ff0-4582-9e03-d4a2e710cb6d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "068f7886-ef4c-453f-a963-609aa2d57421",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "699b00de-36d0-4aa5-8b3f-db3fda46822a",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e97b03f5-3309-461d-8c40-902a4d698eae",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RaiseHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}